--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
   body{
     margin:0; font-family: system-ui,-apple-system,Segoe UI,Roboto,Helvetica,Arial,sans-serif;
     background-image:url("https://i.postimg.cc/jSmGH445/Pony.png");
-    background-repeat:repeat;
-    background-size:140px auto;
+    background-repeat:repeat; background-size:140px auto;
   }
   .wrap{ max-width: 820px; margin: 32px auto; padding: 0 16px; }
   .card{ background:#fff; border-radius:14px; box-shadow:0 10px 28px rgba(0,0,0,.08); padding:20px; }
@@ -49,6 +48,8 @@
   .item .t{ font-weight:700; }
   .item .meta{ color:#6b7280; font-size:13px; }
   .item .desc{ margin-top:4px; font-size:14px; }
+  /* hidden iframe for no-CORS fallback */
+  iframe#upload_iframe{ display:none; width:0; height:0; border:0; }
 </style>
 </head>
 <body>
@@ -91,8 +92,11 @@
     </div>
   </div>
 
+  <!-- hidden iframe target for CORS-safe form post -->
+  <iframe id="upload_iframe" name="upload_iframe"></iframe>
+
 <script>
-  // ===== replace with your deployed /exec URL =====
+  /* ===== replace with your deployed /exec URL ===== */
   const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzqnplLlJsrf1rgLQmocmeLOTmyub-tj6jNeaMscqG5v7QfxuDZ_sR-D8sjLv3fDPkO_w/exec';
 
   const $ = id => document.getElementById(id);
@@ -151,11 +155,11 @@
     }catch{ renderRecent([]); }
   }
 
-  // multipart with progress
+  // --- XHR with progress (first attempt) ---
   function postMultipartWithProgress(fd){
     return new Promise((resolve, reject)=>{
       const xhr = new XMLHttpRequest();
-      xhr.open('POST', SCRIPT_URL, true);
+      xhr.open('POST', SCRIPT_URL, true);          // no custom headers → should avoid preflight
       xhr.upload.onprogress = (e)=>{
         if (e.lengthComputable) setProgress((e.loaded / e.total) * 100);
       };
@@ -168,16 +172,58 @@
     });
   }
 
-  function toBase64(file){
-    return new Promise((res,rej)=>{
-      const fr = new FileReader();
-      fr.onload = ()=>{
-        const s = String(fr.result||''); const i = s.indexOf('base64,');
-        res(i>=0 ? s.slice(i+7) : s);
-      };
-      fr.onerror = ()=>rej(fr.error || new Error('read error'));
-      fr.readAsDataURL(file);
-    });
+  // --- iframe fallback (no CORS) ---
+  async function iframeUploadFallback(oldCount){
+    // Build a temporary form that targets the hidden iframe
+    const form = document.createElement('form');
+    form.method = 'POST';
+    form.enctype = 'multipart/form-data';
+    form.action = SCRIPT_URL;
+    form.target = 'upload_iframe';
+    form.style.display = 'none';
+
+    // Move the real file input into this form (required to send the file)
+    const fileInput = $('file');
+    const fileInputParent = fileInput.parentNode;
+    form.appendChild(fileInput);
+
+    // Add mirrored text fields
+    for (const [id,name] of [['name','name'],['email','email'],['title','title'],['description','description']]){
+      const inp = document.createElement('input');
+      inp.type = 'hidden'; inp.name = name; inp.value = $(id).value.trim();
+      form.appendChild(inp);
+    }
+    const c = document.createElement('input');
+    c.type='hidden'; c.name='consent'; c.value = $('consent').checked ? 'true':'false';
+    form.appendChild(c);
+
+    document.body.appendChild(form);
+
+    // Submit via iframe (no CORS restrictions)
+    form.submit();
+
+    // Restore a fresh file input back to the UI
+    const fresh = document.createElement('input');
+    fresh.type = 'file'; fresh.id = 'file'; fresh.required = true;
+    fresh.accept = '.jpg,.jpeg,.png,.pdf';
+    fileInputParent.appendChild(fresh);
+    form.remove(); // the old input is gone with the form
+
+    // Poll count to confirm (up to ~30s)
+    setProgress(80);
+    const maxTries = 20;
+    for (let i=0;i<maxTries;i++){
+      await new Promise(r=>setTimeout(r, 1500));
+      try{
+        const j = await fetchJSON(SCRIPT_URL + '?action=count&cache=' + Date.now());
+        if (j.ok && typeof j.count === 'number' && j.count > oldCount){
+          setProgress(100);
+          return { ok:true };
+        }
+      }catch{}
+      setProgress(80 + Math.round((i+1)/maxTries*20)); // 80→100
+    }
+    return { ok:false, error:'Timed out waiting for confirmation' };
   }
 
   async function upload(){
@@ -201,8 +247,15 @@
 
     setBusy(true); clearProgress(); setProgress(1);
 
+    // Remember old count to detect success in iframe mode
+    let oldCount = 0;
     try{
-      // 1) try multipart
+      const j = await fetchJSON(SCRIPT_URL + '?action=count&cache=' + Date.now());
+      if (j.ok && typeof j.count === 'number') oldCount = j.count;
+    }catch{}
+
+    try{
+      // 1) try XHR with FormData (fast path)
       const fd = new FormData();
       fd.append('name', name); fd.append('email', email);
       fd.append('title', title); fd.append('description', desc);
@@ -213,36 +266,35 @@
       try{ data = await postMultipartWithProgress(fd); }
       catch(e){ data = { ok:false, error:String(e) }; }
 
-      // 2) fallback: base64 with simulated progress
-      if (!data.ok && /No file uploaded/i.test(data.error || '')){
-        setProgress(30);
-        const b64 = await toBase64(file); setProgress(60);
-        const fd2 = new FormData();
-        fd2.append('name', name); fd2.append('email', email);
-        fd2.append('title', title); fd2.append('description', desc);
-        fd2.append('consent', consent ? 'true':'false');
-        fd2.append('filebase64', b64);
-        fd2.append('mimetype', file.type || 'application/octet-stream');
-        fd2.append('filename', file.name || 'upload.bin');
-        const r2 = await fetch(SCRIPT_URL, { method:'POST', body: fd2 });
-        const txt2 = await r2.text(); data = JSON.parse(txt2);
-        setProgress(100);
-      } else { setProgress(100); }
+      // 2) if blocked by CORS/network, use iframe fallback
+      if (!data.ok && /Network error|Failed to fetch|TypeError|No file uploaded/i.test(data.error || '')){
+        status.innerHTML = '<span class="muted">Network is blocking cross-origin upload. Using safe fallback…</span>';
+        const r = await iframeUploadFallback(oldCount);
+        if (r.ok){
+          status.innerHTML = '<span class="ok">Upload successful.</span>';
+          $('description').value=''; $('file').value=''; $('title').focus();
+          await refreshCount(); await refreshRecent(); clearProgress(); setBusy(false); return;
+        }else{
+          status.innerHTML = `<span class="err">Upload sent but not confirmed yet. Please check later.</span>`;
+          await refreshCount(); await refreshRecent(); clearProgress(); setBusy(false); return;
+        }
+      }
 
+      // 3) normal XHR path result
+      setProgress(100);
       if (data.ok){
         status.innerHTML = '<span class="ok">Upload successful.</span>';
         $('file').value = ''; $('description').value = ''; $('title').focus();
         await refreshCount(); await refreshRecent();
       }else{
-        const diag = data.diag ? `<pre class="muted" style="white-space:pre-wrap;margin-top:6px;">${JSON.stringify(data.diag,null,2)}</pre>` : '';
-        status.innerHTML = `<span class="err">Upload failed: ${S(data.error)||'Unknown error'}</span>${diag}`;
+        status.innerHTML = `<span class="err">Upload failed: ${S(data.error)||'Unknown error'}</span>`;
       }
     }catch(err){
       status.innerHTML = `<span class="err">Error: ${err.message}</span>`;
       console.error(err);
     }finally{
       setBusy(false);
-      setTimeout(clearProgress, 800);
+      setTimeout(clearProgress, 900);
     }
   }
 
