--- a/index.html
+++ b/index.html
@@ -7,42 +7,36 @@
 <style>
   :root { color-scheme: light; }
   body{
-    margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial, "Apple Color Emoji","Segoe UI Emoji";
+    margin:0; font-family: system-ui, -apple-system, Segoe UI, Roboto, Helvetica, Arial;
     background:#fafafa;
-    /* repeating pony background */
+    /* 背景重複小 pony */
     --pony:url("https://i.postimg.cc/jSmGH445/Pony.png");
     background-image: var(--pony);
     background-repeat: repeat;
-    background-size: 180px auto;  /* small, many ponies */
+    background-size: 180px auto;
     background-attachment: fixed;
   }
-  .wrap{
-    max-width: 980px; margin: 24px auto; padding: 8px 12px;
-  }
+  .wrap{ max-width: 980px; margin: 22px auto; padding: 8px 12px; }
+
+  /* 80% 透明白底 */
   .card{
-    background:#fff; border-radius:16px; box-shadow:0 6px 18px rgba(0,0,0,.07);
+    background: rgba(255,255,255,.8);
+    border-radius:16px; box-shadow:0 6px 18px rgba(0,0,0,.07);
     padding:20px 18px; margin-bottom:16px;
   }
+
   h1{ margin:6px 0 8px; font-size:clamp(22px,3.5vw,34px); }
   .meta{ color:#6b7280; font-weight:600; margin:2px 0 14px; }
 
-  /* form layout */
-  .field{ margin:12px 0; }
+  /* 表單（單欄） */
+  .field{ margin:12px 0; max-width:80%; }
   .field label{ display:block; font-weight:700; margin-bottom:6px; }
-  .field .hint{ color:#6b7280; font-size:13px; margin-top:6px; white-space:nowrap; }
-  .narrow{ max-width:80%; }         /* ← inputs at 80% width */
   input[type="text"], input[type="email"], textarea{
-    width:100%; padding:12px 14px; border:1px solid #d1d5db; border-radius:10px; font-size:16px;
-    background:#fff; outline:none;
+    width:100%; padding:12px 14px; border:1px solid #d1d5db; border-radius:10px; font-size:16px; background:#fff;
   }
   textarea{ min-height:120px; resize:vertical; }
-  .row{ display:flex; gap:12px; flex-wrap:wrap; }
-  .row > .field{ flex:1 1 320px; }
-  input[type="file"]{ display:block; }
 
-  .agree{ display:flex; align-items:flex-start; gap:10px; margin-top:10px; }
-  .agree input{ margin-top:5px; }
-
+  /* 漂亮的主按鈕 */
   .btn{
     display:inline-flex; align-items:center; gap:.55rem; padding:12px 18px; border:0; border-radius:12px;
     background:#3b82f6; color:#fff; font-weight:700; cursor:pointer;
@@ -50,103 +44,118 @@
   }
   .btn[disabled]{ opacity:.5; cursor:not-allowed; }
 
+  /* 「Choose file」美化：隱藏 input，改用 label.btn 觸發 */
+  .file-wrap{ display:flex; align-items:center; gap:12px; }
+  #file{ position:absolute; left:-9999px; }
+  .file-name{ color:#374151; font-size:14px; }
+
+  .hint{ color:#6b7280; font-size:13px; margin-top:6px; white-space:nowrap; }
+
+  .agree{ display:flex; align-items:flex-start; gap:10px; margin-top:10px; max-width:80%; }
+  .agree input{ margin-top:5px; }
+
   .status{ margin-top:12px; }
   .ok{ color:#166534; background:#ecfdf5; border:1px solid #bbf7d0; padding:10px 12px; border-radius:10px; display:inline-block; }
   .warn{ color:#92400e; background:#fef3c7; border:1px solid #fde68a; padding:10px 12px; border-radius:10px; display:inline-block; }
   .err{ color:#991b1b; background:#fee2e2; border:1px solid #fecaca; padding:10px 12px; border-radius:10px; display:inline-block; }
 
-  /* progress */
-  .bar{ height:10px; border-radius:999px; background:#e5e7eb; overflow:hidden; margin-top:10px; }
+  /* 進度條 + 百分比 */
+  .prog-wrap{ max-width:80%; margin-top:10px; }
+  .bar{ height:10px; border-radius:999px; background:#e5e7eb; overflow:hidden; }
   .bar > i{ display:block; height:100%; width:0%; background:#10b981; transition: width .25s ease; }
+  .pct{ font-size:12px; color:#374151; margin-top:6px; }
 
-  /* recent submissions (text only) */
-  .list{ display:flex; flex-direction:column; gap:10px; }
-  .item{
-    background:#fff; border:1px solid #e5e7eb; border-radius:12px; padding:12px 14px;
-  }
+  /* 文字版 Recent submissions */
+  .row-end{ display:flex; justify-content:space-between; align-items:center; }
+  .list{ display:flex; flex-direction:column; gap:10px; margin-top:12px; }
+  .item{ background:#fff; border:1px solid #e5e7eb; border-radius:12px; padding:12px 14px; }
   .item .ttl{ font-weight:700; }
   .item .sub{ color:#6b7280; font-size:13px; }
   .item .desc{ margin-top:6px; white-space:pre-wrap; }
-  .row-end{ display:flex; justify-content:space-between; align-items:center; }
   .a{ color:#2563eb; text-decoration:none; font-weight:600; }
-  .a:hover{text-decoration:underline;}
+  .a:hover{ text-decoration:underline; }
 
-  /* container scaling to keep within iframe */
-  .container-70{ transform:scale(.8); transform-origin: top left; width:125%; }/* visual 80% for fields inside */
   @media (max-width: 720px){
-    .container-70{ transform:none; width:100%; }
-    .narrow{ max-width:100%; }
+    .field, .agree, .prog-wrap{ max-width:100%; }
   }
 </style>
 </head>
 <body>
 <div class="wrap">
-  <div class="card container-70">
+  <div class="card">
     <h1>Fancy Pony — Artwork Submission</h1>
     <div class="meta">Total drawings collected: <span id="total">–</span></div>
 
     <form id="form" novalidate>
-      <div class="row">
-        <div class="field narrow">
-          <label for="name">Your Name *</label>
-          <input id="name" name="name" type="text" required />
-        </div>
-        <div class="field narrow">
-          <label for="email">Your Email *</label>
-          <input id="email" name="email" type="email" required />
-        </div>
+      <div class="field">
+        <label for="name">Your Name *</label>
+        <input id="name" name="name" type="text" required />
       </div>
 
-      <div class="field narrow">
+      <div class="field">
+        <label for="email">Your Email *</label>
+        <input id="email" name="email" type="email" required />
+      </div>
+
+      <div class="field">
         <label for="title">Pony Name *</label>
         <input id="title" name="title" type="text" required />
       </div>
 
-      <div class="field narrow">
-        <label for="file">Upload File *</label>
-        <input id="file" name="file" type="file" accept=".jpg,.jpeg,.png,.pdf" required />
+      <div class="field">
+        <label>Upload File *</label>
+        <div class="file-wrap">
+          <label for="file" class="btn" id="pickBtn">Choose file</label>
+          <span class="file-name" id="fileName">no file selected</span>
+          <input id="file" name="file" type="file" accept=".jpg,.jpeg,.png,.pdf" required />
+        </div>
         <div class="hint">File size must be between <b>1&nbsp;MB</b> and <b>5&nbsp;MB</b>. Recommended: <b>150–300&nbsp;ppi</b> (Letter size scan typically &gt; 1&nbsp;MB).</div>
       </div>
 
-      <div class="field narrow">
+      <div class="field">
         <label for="description">Description (optional)</label>
         <textarea id="description" name="description" placeholder="Tell us about your pony…"></textarea>
       </div>
 
-      <label class="agree narrow">
+      <label class="agree">
         <input id="consent" name="consent" type="checkbox" value="true" required />
         <span>I agree to grant the school marketing rights to print, publicly display, and use my artwork for creative purposes.</span>
       </label>
 
-      <div class="field narrow">
+      <div class="field">
         <button class="btn" id="btn" type="submit">Upload</button>
         <div id="status" class="status"></div>
-        <div class="bar narrow"><i id="prog"></i></div>
+        <div class="prog-wrap">
+          <div class="bar"><i id="prog"></i></div>
+          <div class="pct" id="pct">0%</div>
+        </div>
       </div>
     </form>
   </div>
 
-  <div class="card container-70">
+  <div class="card">
     <div class="row-end">
       <h2 style="margin:0">Recent submissions</h2>
       <a class="a" href="#" id="refresh">refresh</a>
     </div>
-    <div id="list" class="list" style="margin-top:12px;"></div>
+    <div id="list" class="list"></div>
   </div>
 </div>
 
 <script>
-  // === Replace with your /exec URL ===
+  // ← 替換成你目前的 /exec URL
   const SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbzqnplLlJsrf1rgLQmocmeLOTmyub-tj6jNeaMscqG5v7QfxuDZ_sR-D8sjLv3fDPkO_w/exec';
 
-  // util
   const $ = (id) => document.getElementById(id);
-  const fmtTime = (v) => {
-    try { return new Date(v).toLocaleString(); } catch { return String(v||''); }
-  };
-  const setProg = (p) => { $('prog').style.width = Math.max(0, Math.min(100, p)) + '%'; };
+  const setProg = (p) => { const v = Math.max(0, Math.min(100, p|0)); $('prog').style.width = v + '%'; $('pct').textContent = v + '%'; };
+  const timeStr = (v) => { try{ return new Date(v).toLocaleString(); }catch{return String(v||'');} };
 
-  // count + list
+  // 選檔名顯示
+  $('file').addEventListener('change', () => {
+    $('fileName').textContent = $('file').files[0]?.name || 'no file selected';
+  });
+
+  // Count
   async function loadCount(){
     try{
       const r = await fetch(SCRIPT_URL + '?action=count', { cache:'no-store' });
@@ -155,52 +164,51 @@
     }catch{ $('total').textContent = '–'; }
   }
 
+  // Recent (純文字)
   async function loadList(){
     const box = $('list');
-    box.textContent = 'Loading…';
+    box.innerHTML = '<div class="item">Loading…</div>';
     try{
       const r = await fetch(SCRIPT_URL + '?action=list&limit=20', { cache:'no-store' });
       const j = await r.json();
-      if (!j.ok){ box.textContent = 'Failed to load.'; return; }
-      if (!j.items || !j.items.length){ box.textContent = 'No items yet.'; return; }
+      if (!j.ok){ box.innerHTML = '<div class="item">Failed to load.</div>'; return; }
+      const items = j.items || [];
+      if (!items.length){ box.innerHTML = '<div class="item">No items yet.</div>'; return; }
       box.innerHTML = '';
-      j.items.forEach(it => {
+      items.forEach(it => {
         const el = document.createElement('div');
         el.className = 'item';
+        const title = (it.title || 'Untitled');
+        const name = (it.name || 'Anonymous');
+        const ts   = timeStr(it.timestamp);
         const desc = (it.description || '').trim();
+        const fileUrl = it.fileUrl ? `<a class="a" href="${it.fileUrl}" target="_blank" rel="noopener">Open file</a>` : '';
         el.innerHTML = `
-          <div class="ttl">${(it.title || 'Untitled')}</div>
-          <div class="sub">${fmtTime(it.timestamp)} • ${(it.name || 'Anonymous')}</div>
+          <div class="ttl">${title}</div>
+          <div class="sub">${ts} • ${name}</div>
           ${desc ? `<div class="desc">${desc}</div>` : ''}
-          ${it.fileUrl ? `<div style="margin-top:6px;"><a class="a" href="${it.fileUrl}" target="_blank" rel="noopener">Open file</a></div>` : ''}
+          ${fileUrl ? `<div style="margin-top:6px;">${fileUrl}</div>` : ''}
         `;
         box.appendChild(el);
       });
-    }catch(err){
-      box.textContent = 'Failed to load.';
+    }catch{
+      box.innerHTML = '<div class="item">Failed to load.</div>';
     }
   }
   $('refresh').addEventListener('click', (e)=>{ e.preventDefault(); loadList(); });
 
-  // upload (dual-path)
+  // base64 fallback
   function fileToBase64(file){
     return new Promise((resolve, reject)=>{
       const fr = new FileReader();
       fr.onload = () => {
-        const s = String(fr.result || '');
-        const i = s.indexOf('base64,');
-        resolve(i >= 0 ? s.slice(i+7) : s);
+        const s = String(fr.result||''); const i = s.indexOf('base64,'); resolve(i>=0 ? s.slice(i+7) : s);
       };
-      fr.onerror = () => reject(fr.error || new Error('File read error'));
+      fr.onerror = () => reject(fr.error||new Error('File read error'));
       fr.readAsDataURL(file);
     });
   }
-
-  async function tryMultipart(fd){
-    // Some hosts enforce CORS preflight blocks. This may throw.
-    const r = await fetch(SCRIPT_URL, { method:'POST', body:fd });
-    return r.json();
-  }
+  async function tryMultipart(fd){ const r = await fetch(SCRIPT_URL, { method:'POST', body: fd }); return r.json(); }
   async function tryBase64(file){
     const b64 = await fileToBase64(file);
     const fd = new FormData();
@@ -212,13 +220,14 @@
     fd.append('filebase64', b64);
     fd.append('mimetype', file.type || 'application/octet-stream');
     fd.append('filename', file.name || 'upload.bin');
-    const r = await fetch(SCRIPT_URL, { method:'POST', body:fd });
+    const r = await fetch(SCRIPT_URL, { method:'POST', body: fd });
     return r.json();
   }
 
+  // submit
   $('form').addEventListener('submit', async (e)=>{
     e.preventDefault();
-    const btn = $('btn'), st = $('status'), f = $('file');
+    const st = $('status'), btn = $('btn'), f = $('file');
     st.innerHTML = '';
     setProg(0);
     btn.disabled = true;
@@ -228,61 +237,57 @@
     const title = $('title').value.trim();
     if (!name || !email || !title || !f.files[0] || !$('consent').checked){
       st.innerHTML = '<span class="err">Please fill all required fields and agree to the consent.</span>';
-      btn.disabled = false;
-      return;
+      btn.disabled = false; return;
     }
     const file = f.files[0];
     if (file.size < 1*1024*1024 || file.size > 5*1024*1024){
       st.innerHTML = '<span class="err">File must be between 1 MB and 5 MB.</span>';
-      btn.disabled = false;
-      return;
+      btn.disabled = false; return;
     }
 
-    // optimistic progress
-    let prog = 5; setProg(prog);
-
-    // First try multipart; if blocked by CORS, switch to base64
     try{
+      setProg(20);
+      // 先試 multipart
       const fd = new FormData();
       fd.append('name', name);
       fd.append('email', email);
       fd.append('title', title);
       fd.append('description', $('description').value.trim());
       fd.append('consent', $('consent').checked ? 'true' : 'false');
-      fd.append('file', file, file.name); // IMPORTANT: name must be 'file'
-
+      fd.append('file', file, file.name);   // 一定要叫 'file'
       st.innerHTML = '<span class="warn">Uploading… (trying direct upload)</span>';
-      prog = 40; setProg(prog);
-      let data = await tryMultipart(fd);
+      setProg(50);
+
+      let data;
+      try{ data = await tryMultipart(fd); }
+      catch{ data = null; }
 
       if (!data || !data.ok){
         st.innerHTML = '<span class="warn">Network is blocking cross-origin upload. Using safe fallback…</span>';
-        prog = 65; setProg(prog);
+        setProg(75);
         data = await tryBase64(file);
       }
 
-      prog = 90; setProg(prog);
-
       if (data && data.ok){
+        setProg(100);
         st.innerHTML = '<span class="ok">Upload successful!</span>';
         $('form').reset();
-        prog = 100; setProg(prog);
+        $('fileName').textContent = 'no file selected';
         await loadCount();
         await loadList();
       }else{
-        st.innerHTML = `<span class="err">Upload failed: ${(data && data.error) || 'Unknown error'}</span>`;
         setProg(0);
+        st.innerHTML = `<span class="err">Upload failed: ${(data && data.error) || 'Unknown error'}</span>`;
       }
-
     }catch(err){
-      st.innerHTML = `<span class="err">Upload failed: ${err.message || err}</span>`;
       setProg(0);
+      st.innerHTML = `<span class="err">Upload failed: ${err.message || err}</span>`;
     }finally{
       btn.disabled = false;
     }
   });
 
-  // init
+  // 初始化
   loadCount();
   loadList();
 </script>
