--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     --err:#b91c1c;
     --ink:#0f172a;
     --muted:#6b7280;
-    --card-bg: rgba(255,255,255,0.8); /* 80% 透明白 */
+    --card-bg: rgba(255,255,255,0.9); /* 90% 透明白 */
   }
   html,body{height:100%}
   body{
@@ -38,16 +38,25 @@
   .grid{display:block} /* 一行一個 */
   .field{margin:14px 0}
   label{display:block; font-weight:700; margin-bottom:6px}
-  input[type="text"], input[type="email"], textarea{
-    width:80%; /* 欄位縮小到 80% */
-    max-width:100%;
-    padding:12px 12px;
-    border:1px solid #d1d5db; border-radius:10px; background:#fff;
-    font-size:16px; outline:none;
-  }
-  textarea{min-height:120px; resize:vertical}
-  .muted{color:var(--muted)}
-  .note{font-size:14px; color:#475569}
+  /* 統一輸入框與Recent submissions顯示框的風格 */
+input[type="text"],
+input[type="email"],
+textarea {
+  width: 100%;
+  box-sizing: border-box;
+  padding: 10px 14px; /* 與Recent submissions一致 */
+  margin: 8px 0;      /* 上下間距與Recent submissions一致 */
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  font-size: 1rem;
+  background: #fff;
+}
+
+/* Description 區塊保持相同風格 */
+textarea {
+  min-height: 80px;
+  resize: vertical;
+}
 
   /* 自訂漂亮的 Choose File 按鈕 */
   .file-row{display:flex; align-items:center; gap:12px}
