--- a/index.html
+++ b/index.html
@@ -172,9 +172,59 @@ async function loadRecent(){
       row.innerHTML = `<div class="ttl">${url?`<a class="a" target="_blank" href="${url}">${title}</a>`:title}</div>
                        <div class="sub">${ts} • ${name}</div>
                        ${desc?`<div class="desc">${desc}</div>`:''}`;
+      box.appendChild(row); 
+    }
+  }catch(err){ box.innerHTML = `<div class="item">Failed to load. <span class="sub">${err.message}</span></div>`; };
+  // 小工具：任何值都先安全轉字串
+const S = v => v == null ? '' : String(v);
+
+function timeStr(v){
+  try{
+    // Google Sheets 可能回 Date 物件或字串
+    const d = v instanceof Date ? v : new Date(v);
+    return isNaN(d.getTime()) ? '' : d.toLocaleString();
+  }catch{ return ''; }
+}
+
+async function loadRecent(){
+  const box = document.getElementById('list');
+  box.innerHTML = '<div class="item">Loading…</div>';
+  try{
+    const r = await fetch(SCRIPT_URL + '?action=recent&limit=12', { cache:'no-store' });
+    if (!r.ok) throw new Error('HTTP ' + r.status);
+    const j = await r.json();
+    if (!j.ok) throw new Error(j.error || 'API error');
+
+    const items = Array.isArray(j.items) ? j.items : [];
+    if (!items.length){
+      box.innerHTML = '<div class="item">No items yet.</div>';
+      return;
+    }
+
+    box.innerHTML = '';
+    for (const it of items){
+      // 先轉成字串再 .trim()，避免「.trim is not a function」
+      const title = S(it.title).trim() || 'Untitled';
+      const name  = S(it.name).trim()  || 'Anonymous';
+      const desc  = S(it.description).trim();
+      const url   = S(it.fileUrl).trim();
+      const ts    = timeStr(it.timestamp);
+
+      const row = document.createElement('div');
+      row.className = 'item';
+      row.innerHTML = `
+        <div class="ttl">
+          ${url ? `<a class="a" target="_blank" rel="noopener" href="${url}">${title}</a>` : title}
+        </div>
+        <div class="sub">${[ts, name].filter(Boolean).join(' • ')}</div>
+        ${desc ? `<div class="desc">${desc}</div>` : ''}
+      `;
       box.appendChild(row);
     }
-  }catch(err){ box.innerHTML = `<div class="item">Failed to load. <span class="sub">${err.message}</span></div>`; }
+  }catch(err){
+    box.innerHTML = `<div class="item">Failed to load. <span class="sub">${S(err.message || err)}</span></div>`;
+  }
+}
 }
 $('refresh').addEventListener('click', e=>{ e.preventDefault(); loadRecent(); });
 async function fileToBase64(file){
