--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     position:fixed; left:50%; bottom:8px; transform:translateX(-50%);
     font-size:12px; color:#444; background:rgba(255,255,255,.5);
     padding:3px 8px; border-radius:6px; pointer-events:none;
+    white-space: nowrap; /* 這行可以防止自動換行 */
   }
   .wrap{
     max-width:900px; margin:32px auto; padding:20px 18px;
